[package]
name = "prudent-macros"
version = "0.0.3-gamma"
edition = "2018"

license = "BSD-2-Clause OR Apache-2.0 OR MIT"

# rust-version is recognized only since Rust 1.56, but that's OK.
#
# Tests require Rust 1.89+. See
# https://github.com/prudent-rs/prudent/blob/main/.github/workflows/main.yml
rust-version = "1.39"

authors = ["Peter Lyons Kehl<peter.kehl@gmail.com>"]
description = "Internal: prudent macros. Don't use directly/on its own. Instead, see and use prudent."

categories = ["development-tools", "no-std", "no-std::no-alloc", "rust-patterns", "security"]

keywords = ["safe", "safety", "unsafe", "isolation", "review"]

repository = "https://github.com/prudent-rs/prudent-macros"
homepage = "https://github.com/prudent-rs/prudent"

[lints.rust]
unexpected_cfgs = { level = "forbid"}

[features]
# UNSTABLE. See prudent-rs/prudent's feature "assert_unsafe_methods".
assert_unsafe_methods = []
